Bug 55527 - xorg crashes setting up Option Rotate "right" / "left" / "inverted"
Summary: xorg crashes setting up Option Rotate "right" / "left" / "inverted"
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 55794 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-02 08:00 UTC by Marco De Michele
Modified: 2012-10-09 08:56 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg log (26.03 KB, text/plain)
2012-10-02 08:00 UTC, Marco De Michele
no flags Details
dmesg log (50.18 KB, text/plain)
2012-10-02 08:01 UTC, Marco De Michele
no flags Details

Description Marco De Michele 2012-10-02 08:00:02 UTC
Created attachment 67974 [details]
xorg log

I'm using the following software versions:

kernel 3.3.8
xorg-server 1.12.2
xf86-video-intel 2.20.9
mesa 8.0.4-r1
libdrm 2.4.33

on a Intel DH77DF motherboard equipped with Sandy Bridge CPU (G530).

Setting xorg.conf Monitor Rotate Option to a value, different from "normal", as "rigth", "left" or "inverted", Xorg server crashes at boot.

I attach Xorg.0.log and dmesg log files.
Comment 1 Marco De Michele 2012-10-02 08:01:06 UTC
Created attachment 67975 [details]
dmesg log
Comment 2 Chris Wilson 2012-10-02 08:37:17 UTC
Works here with X.Org X Server 1.12.4

Can you please attach gdb and see if you can grab a real bt?
Comment 3 Marco De Michele 2012-10-02 09:48:09 UTC
(In reply to comment #2)
> Works here with X.Org X Server 1.12.4
> 
> Can you please attach gdb and see if you can grab a real bt?

Using xf86-video-intel till 2.20.8 version, rotation works correctly and xorg does not crash, it's only from version 2.20.9 that I have bug.

This is the backtrace I get:

[ 10802.795] Backtrace:
[ 10802.795] 0: /usr/bin/X (xorg_backtrace+0x49) [0x81f1abd]
[ 10802.795] 1: /usr/bin/X (0x8048000+0x1ae59b) [0x81f659b]
[ 10802.795] 2: linux-gate.so.1 (__kernel_rt_sigreturn+0x0) [0xb76f040c]
[ 10802.795] 3: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0xb27bb) [0xb71cc7bb]
[ 10802.795] 4: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0xb32d6) [0xb71cd2d6]
[ 10802.795] 5: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x55a3c) [0xb716fa3c]
[ 10802.795] 6: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x55d24) [0xb716fd24]
[ 10802.795] 7: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x55f41) [0xb716ff41]
[ 10802.795] 8: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x42a65) [0xb715ca65]
[ 10802.795] 9: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x4363c) [0xb715d63c]
[ 10802.795] 10: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb711a000+0x575c9) [0xb71715c9]
[ 10802.795] 11: /usr/bin/X (BlockHandler+0x70) [0x8080472]
[ 10802.796] 12: /usr/bin/X (WaitForSomething+0x312) [0x81ee4f1]
[ 10802.796] 13: /usr/bin/X (0x8048000+0x2b292) [0x8073292]
[ 10802.796] 14: /usr/bin/X (0x8048000+0x1dc6c) [0x8065c6c]
[ 10802.796] 15: /lib/libc.so.6 (__libc_start_main+0xe7) [0xb73ea573]
[ 10802.796] 16: /usr/bin/X (0x8048000+0x1d661) [0x8065661]
[ 10802.796]
[ 10802.796] Segmentation fault at address (nil)
Comment 4 Chris Wilson 2012-10-02 09:59:32 UTC
Attach gdb and grab a real bt please. Or use 'addr2line -e usr/lib/xorg/modules/drivers/intel_drv.so 0xb27bb 0xb32d6 0x55a3c 0x55d24'
Comment 5 Marco De Michele 2012-10-02 10:18:29 UTC
(In reply to comment #4)
> Attach gdb and grab a real bt please. Or use 'addr2line -e
> usr/lib/xorg/modules/drivers/intel_drv.so 0xb27bb 0xb32d6 0x55a3c 0x55d24'

sorry but in the previuos bt I did not add debugging symbols to binary, I also tried X server 1.12.4 but I get the same behavior

this is the addr2line output:

/var/tmp/portage/x11-drivers/xf86-video-intel-2.20.9/work/xf86-video-intel-2.20.9/src/sna/gen6_render.c:2337
/var/tmp/portage/x11-drivers/xf86-video-intel-2.20.9/work/xf86-video-intel-2.20.9/src/sna/gen6_render.c:2687
/var/tmp/portage/x11-drivers/xf86-video-intel-2.20.9/work/xf86-video-intel-2.20.9/src/sna/sna_display.c:2991
/var/tmp/portage/x11-drivers/xf86-video-intel-2.20.9/work/xf86-video-intel-2.20.9/src/sna/sna_display.c:3070
Comment 6 Chris Wilson 2012-10-02 10:35:05 UTC
Thanks!

commit 8c2821d77c4b3bdd4d40d4a2c69f935a9eb0fd47
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 2 11:31:40 2012 +0100

    sna: Remember to call ValidatePicture() before using newly created Pictures
    
    Reported-by: Marco De Michele <marco.demichele@taolab.it>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55527
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 7 Chris Wilson 2012-10-07 17:02:20 UTC
*** Bug 55602 has been marked as a duplicate of this bug. ***
Comment 8 Chris Wilson 2012-10-09 08:56:23 UTC
*** Bug 55794 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.