sna: Remember to call ValidatePicture() before using newly created Pictures

Reported-by: Marco De Michele <marco.demichele@taolab.it>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55527
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>